v1.0.0: Port to 26.1.2 (#34)
* Add key mapping support
* Add DevUtils
* Port platform-related modules
* AccessWidener; Fix ScreenRenderingContext
* Register the command
* Port entity manager & entity properties
* Dump entity properties
* Support variant properties
* Port almost all modules
* Clean some todo
* Fix cost issue
* Fix bugs
* No longer use forcedAge
* Tab to 4 spaces
* Format ported things
* Port github action
* Fix tests
* Format codes
* 1.0.0-beta